--- a/src/content/posts/cored20rpg/bestiary-templates.mdx
+++ b/src/content/posts/cored20rpg/bestiary-templates.mdx
@@ -42,3 +42,81 @@ Off-Hand Counter. Когда %%creaturename%% промахивается по а
 Блокировка щитом. Если атакующий наносит %%creaturename%% удар в ближнем бою и %%creaturename%% видит атакующего, он может добавить 2(1к4) к своему КЗ против начальной атаки, при условии, что он владеет оружием ближнего боя.
 
 Бросок противника. Когда существо, которое видит %%creaturename%%, промахивается по %%creaturename%%% атакой оружием ближнего боя, оно совершает Спасбросок Ловкости КС 15. В случае провала оно отталкивается на 15 футов от %%creaturename%%.
+
+
+Простые в использовании шаблоны
+Берсерк = Берсерк
+Телохранитель = Телохранитель
+Командир = Командир
+Хордлинг = Групповой боец
+СКРЫТЕНЬ = 
+Заклинатель = Заклинатель
+Воин = Воин
+СУЩЕСТВО БЕРСЕРК
+Монстр-берсерк - это зверь или другое существо, пришедшее в неостановимое бешенство. Такие существа часто описываются как одичавшие или сошедшие с ума и представляют угрозу для всех, кому посчастливилось с ними столкнуться.
+Спасброски. Существо получает навык спасбросков мудрости. Если оно уже владеет этим навыком, то получает Преимущество во всех Спасбросках Мудрости.
+Агрессивность. В качестве Бонусного действием существо может двигаться со скоростью, равной его скорости, в сторону враждебного существа, которое оно видит.
+Безрассудство. В начале своего хода существо может получить преимущество при всех бросках атаки оружием ближнего боя в течение этого хода, но броски атаки против него имеют преимущество до начала его следующего хода.
+Неуязвимый (3/день). Если в начале своего хода существо недееспособно, эффект, вызвавший это состояние, немедленно прекращается на монстре.
+ТЕЛОХРАНИТЕЛЬ
+Телохранитель - это некий монстр, используемый другими людьми для защиты их от физического вреда. Некоторые из них - тренированные воины, использующие свои умения для защиты. Другие используют свою грубую силу, чтобы атаковать угрозу, пока она не перестанет двигаться.
+Тревога. Существо имеет преимущество при бросках инициативы и проверке Мудрости (Восприятие).
+Охрана. Реакцией на атаку союзника существа в радиусе 5 футов от него является то, что существо вместо этого наносит удар себе.
+Существо также получает одну из следующих способностей.
+Держать строй. Реакцией существо может произвести одну атаку оружием ближнего боя против существа, входящего в зону его досягаемости. Если атака попадает, скорость цели снижается до 0 до конца текущего хода.
+Защитное возмездие. Когда существо в радиусе 5 футов от существа совершает атаку против одного из союзников этого существа, существо может использовать свою реакцию, чтобы совершить атаку оружием ближнего боя против атакующего существа.
+БОСС-МОНСТР
+Лучший способ превратить обычное существо в монстра-босса - наделить его мифическими особенностями и действиями. Вы можете использовать этот шаблон, если вам нужен сокращенный процесс, который вы сможете подробно описать позже. Если вы хотите сделать этого монстра одиночным боссом, выберите базовое существо с CR, равным или чуть меньшим, чем средний уровень партии.
+Сначала дайте этому существу легендарную устойчивость и мифическую особенность. При желании вы можете заменить легендарную Устойчивость одной из альтернативных особенностей, представленных ранее в этом документе, а также добавить дополнительные эффекты, срабатывающие вместе с мифической особенностью.
+Last Stand (мифическая особенность; перезаряжается после короткого или длительного отдыха). Если у существа уменьшается количество хитов до 0, оно не умирает и не теряет сознания. Вместо этого оно восстанавливает все свои хиты.
+Легендарная Устойчивость (3/день). Если существо проваливает Спасбросок, оно может выбрать вместо него успешный.
+Затем дайте существу три легендарных действия; вы можете изменить это число в большую или меньшую сторону, если в партии больше или меньше четырех персонажей. Затем дайте существу три легендарных действия из перечисленных ниже.
+Перемещение. Существо перемещается на половину своей скорости, не провоцируя атаки по возможности.
+Обнаружить. Существо делает проверку Мудрости (Восприятие).
+Заклинание по желанию. Существо произносит одно из своих заклинаний по желанию.
+Слабая атака. Существо использует одну из своих слабых атак.
+Перезарядка (Затрачивает 2 действия). Существо перезаряжает одно из своих действий и использует его.
+Наконец, дайте существу три мифических действия из перечисленных ниже.
+Стремительность. Существо перемещается на свою скорость, не провоцируя атаки возможности.
+Сильная атака. Существо использует одну из своих сильных атак или дважды использует одну из своих слабых атак.
+Нападение (Затрачивает 2 действия). Существо получает Преимущество при всех бросках атаки до конца своего следующего хода.
+Заклинание (Затраты 2 действия). Существо произносит заклинание.
+Защита (Затраты 2 действия). Существо получает преимущество при всех Спасбросках до конца своего следующего хода.
+КОМАНДИР
+Командир - это монстр, который немного умнее, мудрее или харизматичнее своих сородичей или сверстников, что дает ему естественные лидерские навыки, которые он может использовать в бою. Более подробные рекомендации по созданию монстров-лидеров можно найти в моей домашней коллекции Warlord Collection.
+Настройка показателей характеристик. Показатели интеллекта, мудрости или харизмы существа увеличиваются на 2.
+Кости хитов. Существо получает две кости хитов.
+Командный союзник. Бонусным действием существо выбирает одного союзника, которого оно видит в радиусе 30 футов от себя. Если союзник видит и слышит монстра, он может сделать одну атаку оружием реакцией и получает преимущество при броске атаки.
+Лидерство (действие; перезаряжается после короткого или Длинного отдыха). В течение 1 минуты существо может произносить специальную команду или предупреждение, когда видимое им невраждебное существо в радиусе 30 футов от него делает бросок атаки или спасбросок. Существо может добавить к своему броску к4, если оно слышит и понимает монстра. Существо может одновременно использовать только одну кость Лидерства. Этот эффект заканчивается, если существо становится недееспособным.
+ОРДАЛИНГ
+Орда - это общий термин, используемый для обозначения любого монстра, который хорошо работает в группах. Хотя стаи демонов и нежити являются наиболее обычными примерами ордынцев в действии, этот термин также может использоваться для обозначения организованных солдат, которые хорошо работают вместе.
+Навыки. Существо получает навык "Атлетика". Если оно уже владело этим навыком, то вместо него оно приобретает опыт в этом навыке.
+Тактика стаи. Существо имеет преимущество при броске атаки против существа, если хотя бы один из союзников существа находится в пределах 5 футов от существа и союзник не выведен из строя.
+Существо также получает одну из следующих особенностей.
+Тактика построения. Существо имеет преимущество в Спасбросках против очарования, испуга, захвата или Обездвиживания, пока оно находится в пределах 5 футов хотя бы от одного союзника.
+Групповое возмездие. Когда существо уменьшается до 0 хитов в результате атаки в ближнем бою, один союзник существа может воспользоваться своей реакцией, чтобы совершить атаку оружием ближнего боя против нападавшего.
+Поведение мобов. Существо может использовать свое бонусное действие, чтобы попытаться схватить или толкнуть существо, если хотя бы один из союзников существа находится в пределах 5 футов от существа и союзник не недееспособен.
+Властная стая. Существо имеет преимущество при проверках на захват или отталкивание существа, если хотя бы один из союзников существа находится в пределах 5 футов от цели и союзник не выведен из строя.
+Стая. Существо добавляет дополнительную кость урона к броскам урона от оружия, находясь в пределах 5 футов от союзника, который не выведен из строя.
+СКРЫТЕНЬ
+СКРЫТЕНЬ - это особо скрытный монстр, способный оставаться незамеченным благодаря обычным навыкам или магическим способностям.
+Корректировка очков способностей. Показатель ловкости этого существа становится равным 13, если он был равен 12 или ниже.
+Навыки. Существо приобретает навык Скрытность. Если оно уже владело этим навыком, то вместо него оно получает опыт в этом навыке.
+Существо получает одну из следующих способностей.
+Хитрость. В каждый свой ход существо может использовать бонусное действие, чтобы выполнить действие "Рывок", "Отход" или "Прятаться".
+Ловкий побег. Существо может использовать действие Отход или Прятаться в качестве бонусного действия на каждом своем ходу.
+Скрытность в тени. Находясь в тусклом свете или темноте, существо может использовать действие "Спрятаться" в качестве бонусного действия.
+Существо также получает одно из следующих свойств.
+Окутать себя (действие). Существо становится невидимым до конца своего следующего хода. Невидимость заканчивается, если существо делает бросок атаки, наносит урон или произносит сотворение заклинания.
+Скрытник. Когда существо скрыто от существа и промахивается по нему атакой оружием дальнего боя, атака не раскрывает местоположение существа.
+Бесследный. Существо не оставляет следов, указывающих на то, где оно было или куда направляется.
+ЗАКЛИНАТЕЛЬ
+Любой разумный монстр способен стать заклинателем, используя различные способы. Этот шаблон позволяет быстро добавить заклинания монстру, у которого их еще нет.
+Корректировка очков способностей. Показатели Интеллекта, Мудрости или Харизмы существа увеличиваются на 2, минимум до 13.
+Сотворение заклинаний. Уровень заклинаний этого существа равен половине его рейтинга вызова (округление вверх). Оно относится к одному из следующих классов: искусник, бард, жрец, друид, паладин, рейнджер, чародей, маг или волшебник. Заклинательная характеристика и количество заклинаний, которые он знает или готовит, определяются выбором класса.
+ВОИН
+Воин - это монстр, использующий боевую подготовку для повышения своих боевых возможностей. Только лучшие воины могут считаться бойцами, но даже небольшое количество тренировок может создать значительный разрыв между воином и его сверстниками.
+Корректировка очков способностей. Показатель силы или ловкости существа увеличивается на 2.
+Экипировка. Существо приобретает навыки владения всеми видами оружия и доспехов. Не стесняйтесь улучшать его снаряжение по своему усмотрению.
+Кости хитов. Существо получает три костя хитов.
+Боевое Преимущество (1/оборот). Существо может нанести дополнительные 7 (2d6) повреждений существу, в которое оно попало при атаке оружием, если это существо находится в пределах 5 футов от союзника существа, который не выведен из строя.
