--- a/src/content/posts/cored20rpg/bestiary-templates.mdx
+++ b/src/content/posts/cored20rpg/bestiary-templates.mdx
@@ -9,9 +9,109 @@ tags:
   - Шаблоны
 author: Антон "Palant" Палихов
 ---
+## ЛИДЕРЫ, ПОЛКОВОДЦЫ И ВОЕНАЧАЛЬНИКИ
+Капрал
+Сержант
+Лейтенант
+Капитан
+Командир
+Генерал
+Возможные особенности военачальника
+Усиление. Находясь в пределах 30 футов от военачальника, любой его союзник делает Спасброски с Преимуществом, и этот союзник восстанавливает 1к6 Хитов, когда начинает свой ход.
+Храбрый. Военачальник имеет преимущество при выполнении Спасбросков против испуга.
+Вдохновляющее присутствие. Пока военачальник не выведен из строя, любой союзник в радиусе 30 футов от военачальника не может быть испуган, и союзник получает временные хиты, равные модификатору харизмы военачальника, когда начинает свой ход в этом месте.
+Ралли. Пока военачальник не выведен из строя, каждый союзник военачальника в радиусе 30 футов от него не может быть очарован или испуган.
+Тактическая дисциплина. Военачальник имеет преимущество при всех проверках способностей и Спасбросках, сделанных во время боя.
+Тактика построения. Военачальник и каждый союзник в радиусе 30 футов от него имеют преимущество в Спасбросках против очарования, испуга, захвата или Обездвиживания в радиусе 5 футов от хотя бы одного союзника.
+Крик сплочения. Военачальник выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит или слышит военачальника, он получает 10 временных хитов и не может быть испуган в течение 1 минуты.
+Действия
+Боевое вдохновение. Военачальник выбирает до трех союзников, которых он может видеть в радиусе 30 футов от себя. До конца следующего хода военачальника каждый из них может добавить к4 к своим броскам атаки и спасброскам.
+Лидерство (перезаряжается после короткого или длительного отдыха). В течение 1 минуты военачальник может произносить специальную команду или предупреждение, когда невраждебное существо, которое он видит в радиусе 30 футов от него, делает бросок атаки или спасбросок. Существо может добавить К4 к своему броску, если оно слышит и понимает военачальника. Существо может одновременно использовать только один кубик Лидерства. Этот эффект прекращается, если военачальник становится недееспособным. 
+Бонусным действием
+Командовать союзником. Бонусным действием военачальник выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит и слышит монстра, он может произвести одну атаку оружием в качестве реакции и получает преимущество при броске атаки. 
+Тактический маневр. Бонусным действием существо выбирает одного монстра, которого оно видит в радиусе 60 футов от себя. Если союзник видит и слышит монстра, он может воспользоваться своей реакцией, чтобы переместиться на половину своей скорости, не провоцируя атаки по возможности.
+Мастер тактики. Военачальник может использовать действие "Помощь" в качестве бонусного действия.
+Реакции
+Оплот (3/день). Когда союзник в радиусе 30 футов от военачальника проваливает Спасбросок, союзник может перебросить Спасбросок.
+Быстрые рефлексы. Когда существо выполняет реакцию, оно также может перемещаться на половину своей скорости, не провоцируя атаки по возможности.
+Легендарная реакция. Существо может потратить одно легендарное действие на реакцию, даже если оно уже использовало свою обычную реакцию.
+Ограниченная реактивность. Существо может использовать две Реакции за раунд в бою.
+Реактивность. Существо может совершить одну реакцию на каждом ходу в бою.
+Легендарные действия
+Полководец может совершить 3 легендарных действия, выбрав одно из перечисленных ниже. Одновременно можно использовать только один вариант легендарного действия и только в конце хода другого существа. Полководец восстанавливает потраченные легендарные действия в начале своего хода.
+Продвижение. Военачальник перемещается на свою скорость. Кроме того, до пяти союзников, которые видят и слышат военачальника, могут использовать свои Реакции для перемещения на половину своей Скорости.
+Схватить. Один союзник, который видит и слышит военачальника, может использовать свою реакцию, чтобы попытаться схватить одно существо в пределах своей досягаемости.
+Командовать союзником. Военачальник выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит и слышит военачальника, он может произвести одну атаку оружием в качестве реакции и получает преимущество при броске атаки.
+Обнаружение. Военачальник делает проверку на Мудрость (Восприятие).
+Помощь. Военачальник выполняет действие "Помощь". Если он использует действие "Помощь", чтобы помочь союзнику атаковать существо, цель этой атаки может находиться не в 5, а в 30 футах от него, если союзник видит или слышит военачальника.
+Вдохновляющий лидер. Военачальник выбирает до пяти союзников, которых он видит в радиусе 30 футов от себя. Каждый союзник получает временное количество хитов, равное 2d8 + модификатор харизмы военачальника.
+Использовать предмет. Военачальник выполняет действие "Использовать предмет".
+Испуг противника (Затраты 2 действия). Военачальник выбирает одного врага, которого он видит в радиусе 30 футов от себя. Если цель видит и слышит его, то она должна успешно выполнить Спасбросок Мудрости (КС 8 + Бонус владения военачальника + модификатор Харизмы военачальника) или быть испуганной до конца следующего хода военачальника.
+Лидерство (Затрачивает 2 действия). До конца следующего хода военачальника каждый союзник по выбору военачальника, который может видеть военачальника, может добавить к4 к каждому из своих бросков атаки, проверок способностей и спасбросков. Этот эффект прекращается, если военачальник становится недееспособным.
+Подавляющее нападение (Затрачивает 3 действия). До пяти союзников, которые слышат и видят военачальника, могут использовать свои Реакции, чтобы произвести одну атаку оружием.
+Легендарные Устойчивости
+Легендарная Устойчивость дается многим легендарным монстрам, чтобы предотвратить их захват способностью "спаси или отсоси", такой как заклинание удержания монстра или способность монаха "Ошеломляющий удар". С одной стороны, эта механика может предотвратить преждевременное завершение боя с боссом из-за неудачного спасброска против мощного эффекта. С другой стороны, некоторые DM считают эту механику скучной и/или несправедливой по отношению к игрокам. В таком случае рассмотрите следующие альтернативы:
+Вырваться на свободу Если существо недееспособно в начале своего хода, эффект, вызвавший это состояние, немедленно заканчивается на монстре, а существо получает урон, равный его рейтингу вызова.
+Свобода действий. Существо имеет преимущество в Спасбросках против эффектов, которые могут его сковать или обездвижить.
+Свобода передвижения. Существо игнорирует труднопроходимую местность, а магические эффекты не могут уменьшить его скорость или сковать его движения. Оно может потратить 5 футов движения, чтобы освободиться от немагических ограничений или захвата.
+Неукротимость (3/день). Существо может повторить неудачный Спасбросок. Оно должно использовать новый бросок.
+Легендарная долговечность (1/оборот). Существо может выбрать уменьшение вдвое урона, получаемого от эффекта, который оно может видеть.
+Легендарная защита. Если существо проваливает спасбросок, оно может потратить одно легендарное действие, чтобы добиться успеха.
+Легендарная Устойчивость (1/раунд). Если существо проваливает спасбросок, оно может выбрать вместо него успешный.
+Непробиваемый (3/день). Если в начале своего хода существо недееспособно, эффект, вызывающий это состояние, немедленно прекращается на монстре.
+ЛИДЕРЫ, ПОЛКОВОДЦЫ И ВОЕНАЧАЛЬНИКИ
+Капрал
+Сержант
+Лейтенант
+Капитан
+Командир
+Генерал
+Возможные особенности военачальника
+Усиление. Находясь в пределах 30 футов от военачальника, любой его союзник делает Спасброски с Преимуществом, и этот союзник восстанавливает 1к6 Хитов, когда начинает свой ход.
+Храбрый. Военачальник имеет преимущество при выполнении Спасбросков против испуга.
+Вдохновляющее присутствие. Пока военачальник дееспособен, любой союзник в радиусе 30 футов от военачальника не может быть испуган, и союзник получает временное количество хитов, равное модификатору харизмы военачальника, когда начинает свой ход в этом месте.
+Ралли. Пока полководец не дееспособен, каждый союзник полководца в радиусе 30 футов от него не может быть очарован или испуган.
+Тактическая дисциплина. Военачальник имеет преимущество во всех проверках характеристик и Спасбросках, сделанных во время боя.
+Тактика построения. Военачальник и каждый союзник в радиусе 30 футов от него имеют преимущество в Спасбросках против очарования, испуга, захвата или Обездвиживания в радиусе 5 футов от хотя бы одного союзника.
+Крик сплочения. Военачальник выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит или слышит военачальника, он получает 10 временных хитов и не может быть испуган в течение 1 минуты.
+Действия
+Боевое вдохновение. Военачальник выбирает до трех союзников, которых он может видеть в радиусе 30 футов от себя. До конца следующего хода военачальника каждый из них может добавить к4 к своим броскам атаки и спасброскам.
+Лидерство (перезаряжается после короткого или длительного отдыха). В течение 1 минуты военачальник может произносить специальную команду или предупреждение, когда невраждебное существо, которое он видит в радиусе 30 футов от него, делает бросок атаки или спасбросок. Существо может добавить К4 к своему броску, если оно слышит и понимает военачальника. Существо может одновременно использовать только один кубик Лидерства. Этот эффект прекращается, если военачальник становится недееспособным. 
+Бонусным действием
+Командовать союзником. Бонусным действием военачальник выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит и слышит монстра, он может произвести одну атаку оружием в качестве реакции и получает преимущество при броске атаки. 
+Тактический маневр. Бонусным действием существо выбирает одного монстра, которого оно видит в радиусе 60 футов от себя. Если союзник видит и слышит монстра, он может воспользоваться своей реакцией, чтобы переместиться на половину своей скорости, не провоцируя атаки по возможности.
+Мастер тактики. Военачальник может использовать действие "Помощь" в качестве бонусного действия.
+Реакции
+Оплот (3/день). Когда союзник в радиусе 30 футов от военачальника проваливает Спасбросок, союзник может перебросить Спасбросок.
+Быстрые рефлексы. Когда существо выполняет реакцию, оно также может перемещаться на половину своей скорости, не провоцируя атаки по возможности.
+Легендарная реакция. Существо может потратить одно легендарное действие на реакцию, даже если оно уже использовало свою обычную реакцию.
+Ограниченная реактивность. Существо может использовать две Реакции за раунд в бою.
+Реактивность. Существо может совершить одну реакцию на каждом ходу в бою.
+Легендарные действия
+Полководец может совершить 3 легендарных действия, выбрав одно из перечисленных ниже. Одновременно можно использовать только один вариант легендарного действия и только в конце хода другого существа. Полководец восстанавливает потраченные легендарные действия в начале своего хода.
+Продвижение. Военачальник перемещается на свою скорость. Кроме того, до пяти союзников, которые видят и слышат военачальника, могут использовать свои Реакции для перемещения на половину своей Скорости.
+Схватить. Один союзник, который видит и слышит военачальника, может использовать свою реакцию, чтобы попытаться схватить одно существо в пределах своей досягаемости.
+Командовать союзником. Военачальник выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит и слышит военачальника, он может произвести одну атаку оружием в качестве реакции и получает преимущество при броске атаки.
+Обнаружение. Военачальник делает проверку на Мудрость (Восприятие).
+Помощь. Военачальник выполняет действие "Помощь". Если он использует действие "Помощь", чтобы помочь союзнику атаковать существо, цель этой атаки может находиться не в 5, а в 30 футах от него, если союзник видит или слышит военачальника.
+Вдохновляющий лидер. Военачальник выбирает до пяти союзников, которых он видит в радиусе 30 футов от себя. Каждый союзник получает временное количество хитов, равное 2d8 + модификатор харизмы военачальника.
+Использовать предмет. Военачальник выполняет действие "Использовать предмет".
+Испуг противника (Затраты 2 действия). Военачальник выбирает одного врага, которого он видит в радиусе 30 футов от себя. Если цель видит и слышит его, она должна успешно совершить спасбросок Харизмы (КС 8 + Бонус владения + модификатор Харизмы военачальника) или быть напуганной до конца следующего хода военачальника.
+Лидерство (Затрачивает 2 действия). До конца следующего хода военачальника каждый союзник по выбору военачальника, который может видеть военачальника, может добавить к4 к каждому своему броску атаки, проверке характеристик и спасброскам. Этот эффект прекращается, если военачальник становится недееспособным.
+Подавляющее нападение (Затрачивает 3 действия). До пяти союзников, которые слышат и видят военачальника, могут использовать свои Реакции, чтобы произвести одну атаку оружием.
+Легендарные Устойчивости
+Легендарная Устойчивость дается многим легендарным монстрам, чтобы предотвратить их захват способностью "спасись или ошеломлен", такой как заклинание удержания монстра или способность монаха "Ошеломляющий удар". С одной стороны, эта механика может предотвратить преждевременное завершение боя с боссом из-за неудачного спасброска против мощного эффекта. С другой стороны, некоторые DM считают эту механику скучной и/или несправедливой по отношению к игрокам. В таком случае рассмотрите следующие альтернативы:
+Вырваться на свободу Если существо недееспособно в начале своего хода, эффект, вызвавший это состояние, немедленно заканчивается на монстре, а существо получает урон, равный его рейтингу вызова.
+Свобода действий. Существо имеет преимущество в Спасбросках против эффектов, которые могут его сковать или обездвижить.
+Свобода передвижения. Существо игнорирует труднопроходимую местность, а магические эффекты не могут уменьшить его скорость или сковать его движения. Оно может потратить 5 футов движения, чтобы освободиться от немагических ограничений или захвата.
+Неукротимость (3/день). Существо может повторить неудачный Спасбросок. Оно должно использовать новый бросок.
+Легендарная долговечность (1/оборот). Существо может выбрать уменьшение вдвое урона, получаемого от эффекта, который оно может видеть.
+Легендарная защита. Если существо проваливает спасбросок, оно может потратить одно легендарное действие, чтобы добиться успеха.
+Легендарная Устойчивость (1/раунд). Если существо проваливает спасбросок, оно может выбрать вместо него успешный.
+Непробиваемый (3/день). Если в начале своего хода существо недееспособно, эффект, вызывающий это состояние, немедленно прекращается на монстре.
 
 
-ГОРДЛИНГ
+## ГОРДЛИНГ
 Орда - это общий термин, используемый для обозначения любого монстра, который хорошо работает в группах. Хотя стаи демонов и нежити являются наиболее обычными примерами ордынцев в действии, этот термин также может использоваться для обозначения организованных солдат, которые хорошо работают вместе.
 Навыки. Существо получает навык "Атлетика". Если оно уже владело этим навыком, то вместо него оно приобретает опыт в этом навыке.
 Тактика стаи. Существо %%creaturename%% имеет преимущество при броске атаки против существа, если хотя бы один из союзников существа находится в пределах 5 футов от него и союзник не дееспособен.
