--- a/src/content/posts/cored20rpg/bestiary-1.mdx
+++ b/src/content/posts/cored20rpg/bestiary-1.mdx
@@ -9,19 +9,19 @@ tags:
 author: Антон "Palant" Палихов
 ---
 
-Типовые особенности существ
+[Типовые особенности существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-traits)
 
-Типовые действия существ
+[Типовые действия существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-actions)
 
-Типовые бонусные действия существ
+[Типовые бонусные действия существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-bonus-actions)
 
-Типовые реакции существ
+[Типовые реакции существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-reactions)
 
-Типовые легендарные действия существ
+[Типовые легендарные действия существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-legendary-actions)
 
 ---
 
-Типовые шаблоны
+[Типовые шаблоны](https://cyborgsandmages.com/posts/cored20rpg/bestiary-templates)
 
 ---
 
