--- a/src/content/posts/cored20rpg/bestiary-traits.mdx
+++ b/src/content/posts/cored20rpg/bestiary-traits.mdx
@@ -45,36 +45,80 @@ Action Surge (1/SR). В свой ход %%creaturename%% совершает до
 Эксперт по оружию. Оружие наносит один дополнительный кост хитов, когда существо попадает им в цель.
 
 
-Реакции
-Защитное возмездие. Когда существо в радиусе 5 футов от этого существа совершает атаку против одного из союзников этого существа, существо может своей реакций  совершить атаку оружием ближнего боя против атакующего существа.
-ГОРДЛИНГ
-Орда - это общий термин, используемый для обозначения любого монстра, который хорошо работает в группах. Хотя стаи демонов и нежити являются наиболее обычными примерами ордынцев в действии, этот термин также может использоваться для обозначения организованных солдат, которые хорошо работают вместе.
-Навыки. Существо получает навык "Атлетика". Если оно уже владело этим навыком, то вместо него оно приобретает опыт в этом навыке.
-Тактика стаи. Существо %%creaturename%% имеет преимущество при броске атаки против существа, если хотя бы один из союзников существа находится в пределах 5 футов от него и союзник не дееспособен.
-Существо также получает одну из следующих особенностей.
-Тактики построений. Существо %%creaturename%% имеет преимущество в Спасбросках против очарования, испуга, захвата или Обездвиживания, пока оно находится в пределах 5 футов хотя бы от одного союзника.
-Групповое возмездие. Когда %%creaturename%% уменьшается до 0 хитов в результате атаки в ближнем бою, один союзник %%creaturename%% может использовать свою реакцию для атаки оружием ближнего боя против атакующего.
-Поведение толпы. %%creaturename%% может использовать свое бонусное действие, чтобы попытаться схватить или толкнуть существо, если хотя бы один из союзников этого существа находится в пределах 5 футов от него и союзник дееспособен.
-Властная стая. У %%creaturename%% есть преимущество при проверках на захват или отталкивание существа, если хотя бы один из союзников существа находится в пределах 5 футов от цели и союзник не дееспособен.
-Стая. Существо %%creaturename%% добавляет дополнительный кубик урона к своим броскам урона от оружия, находясь в пределах 5 футов от союзника, который не дееспособен.
-Атаки
-Удар щитом. Атака оружием ближнего боя: +4 к попаданию, досягаемость 5 футов, одна цель. Попадание: 3 (1к4 + 1) дробящего урона. Если цель большого или меньшего размера, она должна сделать спасбросок на силу КС 12, либо будет сбита с ног или отброшена на 5 футов (по выбору бойца).
-Бонусные действия
-Агрессивный натиск. %%creaturename%% перемещается на скорость, равную его скорости, к врагу, которого он может видеть или слышать. 
-Обезоруживающий удар. %%creaturename%% совершает атаку ближнего боя своим копьем. При попадании цель делает спасбросок на силу КС 15. При провале предмет по выбору %%creaturename%%, который держит цель (включая щит), вылетает из ее захвата и приземляется в пространстве по выбору %%creaturename%% в 10 футах от нее.
-Бросок сети. Атака дальнобойным оружием: +7 к попаданию, дальность 5/15 футов, одна цель. Попадание: Крупная, средняя или мелкая цель подвергается Обездвиживанию сетью, пока не освободится. Существо может использовать свое действие для проверки силы КС 15, в случае успеха освобождая себя или другое существо в пределах досягаемости. Сеть представляет собой объект с КЗ 10, 5 хитами и иммунитетом к дробящему урону.
-Удар щитом Если цель большого или меньшего размера, она должна совершить Спасбросок силы КС 12 или будет сбита с ног или отброшена на 5 футов (по выбору %%creaturename%%).
-Порыв щита. %%creaturename%% делает атаку своим щитом. При попадании цель делает Спасбросок на ловкость КС 15, при провале падает на землю.
-Тактическое движение. До конца хода %%creaturename%% их скорость уменьшается вдвое, а их передвижение не провоцирует атаки по возможности.
-Ранить противника. %%creaturename%% совершает атаку ближнего боя своим копьем. При попадании цель получает рану, наносящую 5 (1d10) ед. колющего урона. Существо может прекратить непрерывный урон, забинтовав рану действием или наложив на цель магическое излечение.
-Реакции
-Противодействие критическому попаданию. Когда существо, которое видит %%creaturename%%, наносит %%creaturename%% критическое попадание атакой оружием ближнего боя, %%creaturename%% делает атаку копьем.
-Уклонение и бросок. Когда существо, которое видит %%creaturename%%, промахивается по гладиатору атакой оружием ближнего боя, %%creaturename%% перемещается на 15 футов, не провоцируя атаки возможности.
-Удар стража. Если противник в радиусе 5 футов от %%creaturename%% атакует цель, отличную от %%creaturename%%, этот противник провоцирует возможность атаки от %%creaturename%%.
-Off-Hand Counter. Когда %%creaturename%% промахивается по атаке ближнего боя атакующего, которого он может видеть в пределах 5 футов, %%creaturename%% делает атаку шорт-сквордом против атакующего.
-Парирование. Если атакующий наносит %%creaturename%% удар в ближнем бою и %%creaturename%% видит атакующего, он может добавить 2 (1d4) к своему КЗ против начальной атаки, при условии, что он владеет оружием ближнего боя.
-Защита. Когда атакующий, которого видит %%creaturename%%, делает бросок атаки против существа, находящегося в пределах 5 футов от %%creaturename%%, %%creaturename%% может наложить помеху на бросок атаки.
-Ответный удар. Когда %%creaturename%% промахивается по атаке ближнего боя атакующего, которого он видит в пределах 5 футов, %%creaturename%% делает атаку рапирой против атакующего с преимуществом.
-Блокировка щитом. Если атакующий наносит %%creaturename%% удар в ближнем бою и %%creaturename%% видит атакующего, он может добавить 2(1к4) к своему КЗ против начальной атаки, при условии, что он владеет оружием ближнего боя.
+## monster traits
 
-Бросок противника. Когда существо, которое видит %%creaturename%%, промахивается по %%creaturename%%% атакой оружием ближнего боя, оно совершает Спасбросок Ловкости КС 15. В случае провала оно отталкивается на 15 футов от %%creaturename%%.
+d100 Наименование Описание
+1 Прилипание Вы можете прилипнуть ко всему, к чему прикасаетесь. Если к вам прикасается существо, равное или меньшее вашего размера, оно оказывается в вашем захвате. Проверки характеристик, выполняемые для освобождения от захвата, имеют помехи.
+2 Агрессивный Вы можете потратить бонусное действие, чтобы переместиться на свою скорость к врагу, которого вы можете видеть.
+3 Тревога Когда вы получаете урон, все другие монстры того же типа, находящиеся в непосредственной близости, узнают о вашей боли.
+4 Чужой разум Вы имеете преимущество в Спасбросках интеллекта.
+5 Аморфность Вы можете перемещаться в пространстве шириной до 1 дюйма, не сжимаясь.
+6 Arcane Protection Устойчивость ко всем магическим повреждениям.
+7 Разбивающий доспехи Когда вы поражаете существо атакой, вы наносите ему кумулятивный штраф -1 к КЗ. Этот штраф может быть снят после 1 часа ремонта.
+8 Аура (антимагия) Вы обладаете аурой 5/10/15 футов. Существа, находящиеся в пределах вашей ауры, имеют помехи при сотворении заклинаний.
+9 Аура (повреждающая) Вы обладаете аурой размером 5/10/15 футов. Существа, которые а) входят в вашу ауру или б) начинают свой ход в вашей ауре, получают урон, равный вашему уровню.
+10 Аура (разрушительная) Вы обладаете аурой размером 5/10/15 футов. Существа, находящиеся в пределах вашей ауры, имеют помеху при Спасбросках.
+11 Аура (Отвлекающая) Вы обладаете аурой размером 5/10/15 футов. Существа, находящиеся под вашей аурой, имеют помеху при выполнении Спасбросков концентрации.
+12 Аура (опутывающая) Вы обладаете аурой размером 5/10/15 футов. Земля в пределах вашей ауры - труднопроходимая местность. Существа, которые начинают свой ход в вашей ауре, должны успешно выполнить Спасбросок Силы или получить Обездвиживание до начала своего следующего хода.
+13 Аура (Пиявка) Вы обладаете аурой размером 5/10/15 футов. Каждый раз, когда вы наносите урон существу, находящемуся в пределах вашей ауры, вы восстанавливаете вдвое меньше хитов.
+14 Аура (Зловоние) Вы обладаете аурой 5/10/15 футов. Существа, находящиеся под вашей аурой, имеют помеху при бросках атаки.
+15 Колючая шкура В начале своего хода вы можете нанести колющий урон, равный вашему уровню, любому существу, схватившему вас.
+16 Кровавое бешенство Вы имеете преимущество при бросках атаки в ближнем бою против существ, у которых нет всех хитов.
+17 Зарядка Если вы двигаетесь по прямой к существу на расстояние более 20 футов, сделайте бросок атаки в ближнем бою с преимуществом. При попадании вы сбиваете существо с ног, помимо других эффектов.
+18 Сжатие В начале своего хода вы можете нанести дробящий урон, равный вашему уровню, любому существу, которое вы захватываете.
+19 Коррозионное тело Любое существо, которое (а) касается вас или (б) совершает против вас атаку ближнего боя, получает урон, равный вашему уровню. Любое оружие, попавшее в вас, получает постоянный и кумулятивный штраф -1 к броскам урона. Оружие уничтожается, если штраф достигает -5.
+20 Критическая защита Критические удары, нанесенные вам, считаются обычными ударами, если только вы уже не окровавлены.
+21 Критическая ярость При бросках 19-20 ваше оружие получает критическое попадание.
+22 Поглощение урона Выберите тип урона. Каждый раз, когда вы получаете урон этого типа, вы восстанавливаете столько же хитов.
+23 Передача урона Когда вы получаете урон от атаки, вы можете передать половину урона другому существу в радиусе 5 футов от вас.
+24 Опасное тело Любое существо, которое (а) коснется вас или (б) ударит вас атакой ближнего боя, находясь в пределах 5 футов от вас, получает урон, равный вашему уровню.
+25 Дезинтеграция Когда вы умираете, ваше тело распадается в пыль. При этом вы оставляете свое оружие и все остальное, что вы несете.
+26 Дыхание дракона Вы можете дышать драконьим огнем.
+27 Скольжение по земле Вы можете прорываться сквозь немагическую, необработанную землю и камень. При этом вы не нарушаете материальный мир, по которому движетесь.
+28 Бегство Если вне своего логова вы можете потерять 0 хитов, вы спасаетесь и бежите в свое логово. Вы остаетесь там в состоянии паралича и покоя до тех пор, пока не восстановите хотя бы 50% своих Хитов.
+29 Взрывчатка Когда вы падаете до 0 хитов, ваше тело взрывается и наносит урон всем в радиусе 5 футов. Вы можете начать детонацию в свой ход бонусным действием; вы взорветесь в начале следующего хода.
+30 Ложный облик Когда вы неподвижны, вы неотличимы от части местного ландшафта.
+31 Разум фей У вас есть преимущество в Спасбросках против очарования, и магия не может усыпить вас.
+32 Полет Вы можете летать со скоростью, равной вашей скорости. Во время полета вы должны перемещаться на всю свою Скорость передвижения или приземляться - если только вы не можете парить. Запуск в полет провоцирует атаку по возможности, даже если вы отходите.
+33 Свобода передвижения Вы игнорируете труднопроходимую местность, а магические эффекты не могут уменьшить вашу Скорость или вызвать ее обездвиживание. Вы можете потратить 5 футов движения, чтобы освободиться от немагических ограничений или быть захваченным.
+34 Захват У вас есть преимущество при бросках атаки против любого существа, которое вы захватили. Кроме того, вы можете разделить любой урон, полученный от атаки, 50/50 с одним существом, которое вы захватили.
+35 Парить Вы можете парить в воздухе в одной точке до 6 секунд, прежде чем вам понадобится двигаться.
+36 Бессмертный Вы не можете быть убиты, пока не будете снижены до 0 хитов атакой определенного типа. Любая другая атака уменьшит ваш хит до 1.
+37 Неизменная форма Вы невосприимчивы к любым заклинаниям или эффектам, которые могут изменить вашу форму.
+38 Непробиваемый Вы обладаете устойчивостью ко всем формам немагического урона.
+39 Непроницаемый Вы можете проходить сквозь любую твердую немагическую материю. Кроме того, вы не можете быть поражены никаким немагическим оружием или атакой.
+40 Независимый Вы имеете преимущество в Спасбросках на Харизму.
+41 Неукротимый Вы невосприимчивы к любым эффектам, которые могут изменить Ваш разум или волю.
+42 Непогрешимый Вы невосприимчивы к любым эффектам, позволяющим почувствовать ваши эмоции или прочитать ваши мысли, а также к любым заклинаниям, которые вы отвергаете. Проверки на мудрость (проницательность), позволяющие определить ваши намерения или искренность, имеют помеху.
+43 Невидимка Вы не можете быть замечены обычным зрением.
+44 Железная воля Вы имеете преимущество при выполнении Спасбросков мудрости.
+45 Пожиратель жизни Когда вы наносите существу урон, снижающий его количество хитов до 0, это существо нельзя оживить никакими средствами, кроме заклинания желания.
+46 Устойчивость к магии Вы имеете преимущество в Спасбросках против заклинаний и других магических эффектов.
+47 Магическое оружие Ваши атаки оружием являются магическими.
+48 Воинское превосходство Один раз за ход, когда вы поражаете существо в радиусе 5 футов от ваших союзников, вы можете нанести дополнительный урон, равный вашему уровню.
+49 Парирование Вы можете потратить свою реакцию, чтобы получить +3 КЗ против одной атаки ближнего боя, которую вы можете видеть.
+50 Мощный прыжок Вы можете прыгнуть в два раза дальше и в два раза выше, чем обычно.
+51 Точность Вы имеете преимущество при выполнении Спасбросков на ловкость.
+52 Rampage Когда в свой ход вы снижаете существо до 0 хитов атакой ближнего боя, вы можете потратить бонусное действие, чтобы переместиться на половину своей скорости и атаковать другую цель.
+53 Reckless В начале своего хода вы можете получить Преимущество во всех атаках ближнего боя, которые вы делаете в этот ход. Однако все атаки против вас имеют преимущество до начала вашего следующего хода.
+54 Перенаправление Когда вы находитесь в пределах 5 футов от союзника, вы можете перенаправить любую атаку, направленную против вас, на вашего союзника.
+55 Регенерация В начале хода вы восстанавливаете количество хитов, равное вашему максимальному количеству хитов / 10. Регенерация прекращается на 1 ход, если вы получаете урон определенного типа (огонь/кислота/молния/и т.д.) или у вас уменьшается количество хитов до 0.
+56 Relentless При первом падении до 0 хитов после длительного отдыха вместо этого снижается до 1 хита.
+57 Надежный нападающий Когда вы промахиваетесь при атаке, вы можете потратить свою реакцию на повторный бросок атаки. Вы должны использовать второй результат.
+58 Скрытность в тенях Находясь в тусклом свете или темноте, вы можете выполнить действие "Скрыться" в качестве бонусного действия.
+59 Shifty В качестве бонусного действия вы можете совершить Отход.
+60 Осадный монстр Вы наносите двойной урон объектам и строениям.
+61 Скользкий Вы имеете преимущество при проверке характеристик и Спасбросках, сделанных для того, чтобы вырваться из захвата.
+62 Spider Climb Вы можете взбираться по сложным поверхностям - в том числе вверх ногами по потолку - без проверки характеристик.
+63 Узы духа Вы связаны с одним или несколькими существами. Ваши КЗ и Спасброски равны наибольшему значению среди всех связанных существ.
+64 Разделение Когда вы окровавлены, вы разделяетесь на две меньшие копии. Каждая новая копия имеет хиты, равные половине ваших оставшихся хитов, и действует независимо.
+65 Уверенные ноги Вы имеете преимущество в Спасбросках на силу и ловкость против эффектов, которые могут лишить вас Распластанности.
+66 Стая Вы можете занять пространство другого существа и наоборот. Вы получаете преимущество при атаках против любого существа, занимающего ваше пространство.
+67 Командная работа Вы получаете преимущество при бросках атаки, если ваша цель находится в пределах 5 футов от союзника, не находящегося под контролем.
+68 Толстая кожа Вы имеете преимущество при выполнении Спасбросков на Конституцию.
+69 Мастер метания Один раз за ход, когда вы поражаете существо атакой дальнего боя с помощью метательного оружия, вы можете нанести ему дополнительный урон, равный вашему уровню.
+70 Tough У вас есть преимущество в Спасбросках на силу.
+71 Uncanny Senses Если вы не выведены из строя, вы не можете быть удивлены.
+72 Беспредельная стойкость Если урон снижает ваш уровень до 0 хитов, сделайте Спасбросок Конситуации с КС 5 + полученный урон. В случае успеха вы потеряете 1 хит.
+73 Бодрствующий Вас никогда не застать спящим.
+74 Боевая магия Когда вы используете свое действие для сотворения заклинания, вы можете сделать одну атаку оружием в качестве бонусного действия.
