--- a/src/content/posts/core-d20/bestiary-beginning.mdx
+++ b/src/content/posts/core-d20/bestiary-beginning.mdx
@@ -66,3 +66,8 @@ tags:
 [Про солдат, наемных и не только, Часть 3](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
 
 ---
+
+
+---
+
+[БЕСТИАРИЙ - ПОЛЕЗНЫЕ ССЫЛКИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
