--- a/src/content/posts/core-d20/bestiary-drow-warrior.mdx
+++ b/src/content/posts/core-d20/bestiary-drow-warrior.mdx
@@ -70,3 +70,8 @@ ___
 [Дроу - кратко про тактику и столкновения ](https://cyborgsandmages.com/posts/articles/drow-tactics-lore-encounters)
 
 [Индекс статей про тактики существ](https://cyborgsandmages.com/posts/articles/bestiary-tactics-index)
+
+
+---
+
+[БЕСТИАРИЙ - ПОЛЕЗНЫЕ ССЫЛКИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
