--- a/src/content/posts/core-d20/bestiary.mdx
+++ b/src/content/posts/core-d20/bestiary.mdx
@@ -11,3 +11,8 @@ tags:
 ---
 
 <Creature id="purple-dragon-blade" />{' '}
+
+
+---
+
+[БЕСТИАРИЙ - ПОЛЕЗНЫЕ ССЫЛКИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
