--- a/src/content/posts/cored20rpg/bestiary-actions.mdx
+++ b/src/content/posts/cored20rpg/bestiary-actions.mdx
@@ -78,3 +78,7 @@ Striker
 55 Защита Союзники в радиусе 10 футов от вас получают +2 КЗ.
 56 Клич сплочения Раз в ход, когда вы поражаете цель атакой, вы можете снять текущее состояние с союзника, которого вы видите.
 
+
+---
+
+[БЕСТИАРИЙ - ПОЛЕЗНЫЕ ССЫЛКИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
