--- a/src/content/posts/cored20rpg/bestiary-bonus-actions.mdx
+++ b/src/content/posts/cored20rpg/bestiary-bonus-actions.mdx
@@ -9,3 +9,10 @@ tags:
   - Бонусные Действия
 author: Антон "Palant" Палихов
 ---
+
+Второе дыхание (1/SR). %%creaturename%% может бонусным действием восстановить 16 (1к10 + %%level%%) хитов.
+
+
+---
+
+[БЕСТИАРИЙ - ПОЛЕЗНЫЕ ССЫЛКИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
