--- a/src/content/posts/cored20rpg/bestiary-legendary-actions.mdx
+++ b/src/content/posts/cored20rpg/bestiary-legendary-actions.mdx
@@ -9,3 +9,8 @@ tags:
   - Действия
 author: Антон "Palant" Палихов
 ---
+
+
+---
+
+[БЕСТИАРИЙ - ПОЛЕЗНЫЕ ССЫЛКИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
