--- a/src/content/posts/cored20rpg/bestiary-reactions.mdx
+++ b/src/content/posts/cored20rpg/bestiary-reactions.mdx
@@ -9,3 +9,12 @@ tags:
   - Реакции
 author: Антон "Palant" Палихов
 ---
+
+Реакции
+
+Защитное возмездие. Когда существо в радиусе 5 футов от этого существа совершает атаку против одного из союзников этого существа, существо может своей реакций  совершить атаку оружием ближнего боя против атакующего существа.
+
+
+---
+
+[БЕСТИАРИЙ - ПОЛЕЗНЫЕ ССЫЛКИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
