--- a/src/content/posts/cored20rpg/bestiary-statblock.mdx
+++ b/src/content/posts/cored20rpg/bestiary-statblock.mdx
@@ -173,3 +173,9 @@ ___
 >
 >### РЕАКЦИИ
 >***Парирование.*** Дроу добавляет +2(1к4) к КЗ против одной атаки ближнего боя, которая должна попасть по нему. Для этого дроу должен видеть атакующего и использовать оружие ближнего боя.
+
+
+
+---
+
+[БЕСТИАРИЙ - ПОЛЕЗНЫЕ ССЫЛКИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
