--- a/src/content/posts/cored20rpg/bestiary-templates.mdx
+++ b/src/content/posts/cored20rpg/bestiary-templates.mdx
@@ -842,3 +842,7 @@ Mounted Lancing. While mounted and not incapacitated, the %%creaturename%% an ex
 Mounted Skirmisher. While the %%creaturename%% is mounted and not incapacitated, it’s mount can use the Disengage or Dash action as a bonus action after the %%creaturename%% uses its action to make a ranged attack with its shortbow.
 Skilled Rider. Attack rolls made against the %%creaturename%%’s mount have disadvantage.
 Thundering Charge (1/Turn). If the %%creaturename%%’s mount moves at least 20 feet straight toward a target and the %%creaturename%% hits it with a spear attack on the same turn, the target takes an extra 7 (2d6) piercing damage. If the target is a creature, it must succeed on a DC 13 Strength saving throw or be knocked prone.
+
+---
+
+[БЕСТИАРИЙ - ПОЛЕЗНЫЕ ССЫЛКИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
