--- a/src/content/posts/cored20rpg/bestiary-traits.mdx
+++ b/src/content/posts/cored20rpg/bestiary-traits.mdx
@@ -122,3 +122,7 @@ d100 Наименование Описание
 72 Беспредельная стойкость Если урон снижает ваш уровень до 0 хитов, сделайте Спасбросок Конситуации с КС 5 + полученный урон. В случае успеха вы потеряете 1 хит.
 73 Бодрствующий Вас никогда не застать спящим.
 74 Боевая магия Когда вы используете свое действие для сотворения заклинания, вы можете сделать одну атаку оружием в качестве бонусного действия.
+
+---
+
+[БЕСТИАРИЙ - ПОЛЕЗНЫЕ ССЫЛКИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
