--- a/src/content/posts/cored20rpg/bestiary.mdx
+++ b/src/content/posts/cored20rpg/bestiary.mdx
@@ -10,4 +10,8 @@ tags:
   - D&D 5e
 ---
 
-<Creature id="purple-dragon-blade" />{' '}
+
+
+---
+
+[БЕСТИАРИЙ - ПОЛЕЗНЫЕ ССЫЛКИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
