--- a/src/content/posts/cored20rpg/bestiary-pc-options-for-npc.mdx
+++ b/src/content/posts/cored20rpg/bestiary-pc-options-for-npc.mdx
@@ -343,3 +343,8 @@ Agile. The creature doesn't provoke opportunity attacks when it moves out of an 
 Sure Footed. The creature ignores the effects of difficult terrain (or only a certain type of it).
 Sharpshooter. Before making a ranged weapon attack, The creature can choose to impose disadvantage on the attack roll. If the attack hits, it automatically becomes a critical hit.
 Steady Aim. The creature’s ranged weapon attacks ignore half cover and three-quarters cover. Additionally, attacking at long range doesn't impose disadvantage on its ranged weapon attack rolls.
+
+
+---
+
+[БЕСТИАРИЙ - ПОЛЕЗНЫЕ ССЫЛКИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
